Fix spacing between jumbotron and navbar, adjust font sizes for panel content

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,26 @@
+/* General */
+
+h2 {
+  font-size: 42px;
+  text-align: center;
+}
+
+p {
+  font-size: 1.2em;
+}
+
+/* Navbar */
+
+.navbar {
+  margin-bottom: 0;
+}
+
 /* Jumbotron */
 
 .jumbotron {
 	margin-top: -3%;
-  margin-bottom: -0.2%;
+  margin-bottom: 0;
+  padding: 5%;
 }
 
 .jumbotron h1 {
@@ -19,12 +37,17 @@
 
 /* Panel */
 
+.panel {
+  border: none;
+  box-shadow: none;
+  padding: 0 5%;
+}
+
 .panel h3 {
   text-align: center;
 }
 
 .secondary {
-  text-align: center;
   text-shadow: 1px 1px #c0c0c0;
 }
 
